--- a/index.html
+++ b/index.html
@@ -2,86 +2,160 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <title>만다라트 방식 새해 목표</title>
+  <title>9×9 만다라트 예시</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>만다라트 방식 새해 목표</h1>
-  <p>1번 칸(가운데)은 내가 되고자 하는 비전,<br>
-     2~9번 칸(주변)은 비전을 달성하기 위한 목표들을 입력하세요.</p>
 
-  <!-- 만다라트 3x3 그리드 -->
-  <div class="mandal-grid">
-    <!-- 2번 목표 셀 -->
-    <div class="mandal-cell">
-      <label for="goal2">2번 목표</label>
-      <input type="text" id="goal2" placeholder="목표 2" />
-      <ul class="task-list" id="tasks2"></ul>
+<h1>만다라트 방식 새해 목표 (9개의 3×3 차트)</h1>
+<p>
+  중앙(5번 차트)의 중앙칸(#5)은 <strong>메인 비전</strong>, 주변 8칸(#1,2,3,4,6,7,8,9)은 <strong>8개 목표</strong>를 입력하세요.<br>
+  버튼을 누르면 각 목표에 대해 GPT가 생성한 <em>할 일 8개</em>가 해당 차트에 표시됩니다.
+</p>
+
+<!-- 3×3의 큰 격자(각 칸에 서브 만다라트 3×3가 들어감) -->
+<div class="big-grid">
+  <!-- 1번 차트 (왼-위) -->
+  <div class="sub-chart" id="subChart1">
+    <div class="cell" id="subChart1Cell1"></div>
+    <div class="cell" id="subChart1Cell2"></div>
+    <div class="cell" id="subChart1Cell3"></div>
+    <div class="cell" id="subChart1Cell4"></div>
+    <div class="cell center" id="subChart1Cell5"></div>
+    <div class="cell" id="subChart1Cell6"></div>
+    <div class="cell" id="subChart1Cell7"></div>
+    <div class="cell" id="subChart1Cell8"></div>
+    <div class="cell" id="subChart1Cell9"></div>
+  </div>
+
+  <!-- 2번 차트 (가운데-위) -->
+  <div class="sub-chart" id="subChart2">
+    <div class="cell" id="subChart2Cell1"></div>
+    <div class="cell" id="subChart2Cell2"></div>
+    <div class="cell" id="subChart2Cell3"></div>
+    <div class="cell" id="subChart2Cell4"></div>
+    <div class="cell center" id="subChart2Cell5"></div>
+    <div class="cell" id="subChart2Cell6"></div>
+    <div class="cell" id="subChart2Cell7"></div>
+    <div class="cell" id="subChart2Cell8"></div>
+    <div class="cell" id="subChart2Cell9"></div>
+  </div>
+
+  <!-- 3번 차트 (오른-위) -->
+  <div class="sub-chart" id="subChart3">
+    <div class="cell" id="subChart3Cell1"></div>
+    <div class="cell" id="subChart3Cell2"></div>
+    <div class="cell" id="subChart3Cell3"></div>
+    <div class="cell" id="subChart3Cell4"></div>
+    <div class="cell center" id="subChart3Cell5"></div>
+    <div class="cell" id="subChart3Cell6"></div>
+    <div class="cell" id="subChart3Cell7"></div>
+    <div class="cell" id="subChart3Cell8"></div>
+    <div class="cell" id="subChart3Cell9"></div>
+  </div>
+
+  <!-- 4번 차트 (왼-중앙) -->
+  <div class="sub-chart" id="subChart4">
+    <div class="cell" id="subChart4Cell1"></div>
+    <div class="cell" id="subChart4Cell2"></div>
+    <div class="cell" id="subChart4Cell3"></div>
+    <div class="cell" id="subChart4Cell4"></div>
+    <div class="cell center" id="subChart4Cell5"></div>
+    <div class="cell" id="subChart4Cell6"></div>
+    <div class="cell" id="subChart4Cell7"></div>
+    <div class="cell" id="subChart4Cell8"></div>
+    <div class="cell" id="subChart4Cell9"></div>
+  </div>
+
+  <!-- 5번 차트 (정중앙) → 메인 비전 & 8개 목표 -->
+  <div class="sub-chart" id="subChart5">
+    <!-- 8칸은 목표, 중앙칸은 비전 -->
+    <div class="cell input-cell" id="subChart5Cell1">
+      <input type="text" placeholder="목표 #1" />
     </div>
-
-    <!-- 3번 목표 셀 -->
-    <div class="mandal-cell">
-      <label for="goal3">3번 목표</label>
-      <input type="text" id="goal3" placeholder="목표 3" />
-      <ul class="task-list" id="tasks3"></ul>
+    <div class="cell input-cell" id="subChart5Cell2">
+      <input type="text" placeholder="목표 #2" />
     </div>
-
-    <!-- 4번 목표 셀 -->
-    <div class="mandal-cell">
-      <label for="goal4">4번 목표</label>
-      <input type="text" id="goal4" placeholder="목표 4" />
-      <ul class="task-list" id="tasks4"></ul>
+    <div class="cell input-cell" id="subChart5Cell3">
+      <input type="text" placeholder="목표 #3" />
     </div>
-
-    <!-- 5번 목표 셀 -->
-    <div class="mandal-cell">
-      <label for="goal5">5번 목표</label>
-      <input type="text" id="goal5" placeholder="목표 5" />
-      <ul class="task-list" id="tasks5"></ul>
+    <div class="cell input-cell" id="subChart5Cell4">
+      <input type="text" placeholder="목표 #4" />
     </div>
-
-    <!-- 1번 비전(가운데) -->
-    <div class="mandal-cell center">
-      <label for="vision">1번 비전</label>
-      <input type="text" id="vision" placeholder="비전(내가 되고 싶은 모습)" />
+    <div class="cell center input-cell" id="subChart5Cell5">
+      <input type="text" placeholder="메인 비전" />
     </div>
-
-    <!-- 6번 목표 셀 -->
-    <div class="mandal-cell">
-      <label for="goal6">6번 목표</label>
-      <input type="text" id="goal6" placeholder="목표 6" />
-      <ul class="task-list" id="tasks6"></ul>
+    <div class="cell input-cell" id="subChart5Cell6">
+      <input type="text" placeholder="목표 #5" />
     </div>
-
-    <!-- 7번 목표 셀 -->
-    <div class="mandal-cell">
-      <label for="goal7">7번 목표</label>
-      <input type="text" id="goal7" placeholder="목표 7" />
-      <ul class="task-list" id="tasks7"></ul>
+    <div class="cell input-cell" id="subChart5Cell7">
+      <input type="text" placeholder="목표 #6" />
     </div>
-
-    <!-- 8번 목표 셀 -->
-    <div class="mandal-cell">
-      <label for="goal8">8번 목표</label>
-      <input type="text" id="goal8" placeholder="목표 8" />
-      <ul class="task-list" id="tasks8"></ul>
+    <div class="cell input-cell" id="subChart5Cell8">
+      <input type="text" placeholder="목표 #7" />
     </div>
-
-    <!-- 9번 목표 셀 -->
-    <div class="mandal-cell">
-      <label for="goal9">9번 목표</label>
-      <input type="text" id="goal9" placeholder="목표 9" />
-      <ul class="task-list" id="tasks9"></ul>
+    <div class="cell input-cell" id="subChart5Cell9">
+      <input type="text" placeholder="목표 #8" />
     </div>
   </div>
 
-  <!-- 버튼 -->
-  <button id="generateBtn">목표별 할 일 8개 생성하기</button>
+  <!-- 6번 차트 (오른-중앙) -->
+  <div class="sub-chart" id="subChart6">
+    <div class="cell" id="subChart6Cell1"></div>
+    <div class="cell" id="subChart6Cell2"></div>
+    <div class="cell" id="subChart6Cell3"></div>
+    <div class="cell" id="subChart6Cell4"></div>
+    <div class="cell center" id="subChart6Cell5"></div>
+    <div class="cell" id="subChart6Cell6"></div>
+    <div class="cell" id="subChart6Cell7"></div>
+    <div class="cell" id="subChart6Cell8"></div>
+    <div class="cell" id="subChart6Cell9"></div>
+  </div>
 
-  <!-- 결과 안내 메세지 -->
-  <div id="statusMessage"></div>
+  <!-- 7번 차트 (왼-아래) -->
+  <div class="sub-chart" id="subChart7">
+    <div class="cell" id="subChart7Cell1"></div>
+    <div class="cell" id="subChart7Cell2"></div>
+    <div class="cell" id="subChart7Cell3"></div>
+    <div class="cell" id="subChart7Cell4"></div>
+    <div class="cell center" id="subChart7Cell5"></div>
+    <div class="cell" id="subChart7Cell6"></div>
+    <div class="cell" id="subChart7Cell7"></div>
+    <div class="cell" id="subChart7Cell8"></div>
+    <div class="cell" id="subChart7Cell9"></div>
+  </div>
 
-  <!-- Script -->
-  <script src="script.js"></script>
+  <!-- 8번 차트 (가운데-아래) -->
+  <div class="sub-chart" id="subChart8">
+    <div class="cell" id="subChart8Cell1"></div>
+    <div class="cell" id="subChart8Cell2"></div>
+    <div class="cell" id="subChart8Cell3"></div>
+    <div class="cell" id="subChart8Cell4"></div>
+    <div class="cell center" id="subChart8Cell5"></div>
+    <div class="cell" id="subChart8Cell6"></div>
+    <div class="cell" id="subChart8Cell7"></div>
+    <div class="cell" id="subChart8Cell8"></div>
+    <div class="cell" id="subChart8Cell9"></div>
+  </div>
+
+  <!-- 9번 차트 (오른-아래) -->
+  <div class="sub-chart" id="subChart9">
+    <div class="cell" id="subChart9Cell1"></div>
+    <div class="cell" id="subChart9Cell2"></div>
+    <div class="cell" id="subChart9Cell3"></div>
+    <div class="cell" id="subChart9Cell4"></div>
+    <div class="cell center" id="subChart9Cell5"></div>
+    <div class="cell" id="subChart9Cell6"></div>
+    <div class="cell" id="subChart9Cell7"></div>
+    <div class="cell" id="subChart9Cell8"></div>
+    <div class="cell" id="subChart9Cell9"></div>
+  </div>
+</div>
+
+<!-- 버튼 -->
+<button id="generateBtn">목표별 할 일 8개 생성하기</button>
+<div id="statusMessage"></div>
+
+<script src="script.js"></script>
 </body>
 </html>
